@@ -467,7 +467,7 @@ div.tox {
         font-family: monospace;
         font-size: 13px;
         width: 100% !important;
-        padding-top: 40px;
+        padding-top: 2.5rem;
         resize: none;
     }
 
